Refactor HTML files to update document structure and improve accessibility by changing file icons from 📄 to 📚 for better representation of educational materials. Additionally, replaced inline styles with a linked CSS stylesheet for consistent styling across multiple pages.

--- a/output/Primer_anio/English/1 - Technical English I 2024/Unit 1 - Work/index.html
+++ b/output/Primer_anio/English/1 - Technical English I 2024/Unit 1 - Work/index.html
@@ -15,10 +15,10 @@
 <body>
   <h1>Primer_anio/English/1 - Technical English I 2024/Unit 1 - Work</h1>
   <ul>
-<li>📄 <a href="1 - Unit 1 - Work.pdf">1 - Unit 1 - Work.pdf</a></li>
-<li>📄 <a href="2 - Unit 1 - Work 1.pdf">2 - Unit 1 - Work 1.pdf</a></li>
+<li>📚 <a href="1 - Unit 1 - Work.pdf">1 - Unit 1 - Work.pdf</a></li>
+<li>📚 <a href="2 - Unit 1 - Work 1.pdf">2 - Unit 1 - Work 1.pdf</a></li>
 <li>📦 <a href="2 - Unit 1 – Work 1 - Practice Answers.docx">2 - Unit 1 – Work 1 - Practice Answers.docx</a></li>
-<li>📄 <a href="2 - Unit 1 – Work 1 - Practice Answers.pdf">2 - Unit 1 – Work 1 - Practice Answers.pdf</a></li>
+<li>📚 <a href="2 - Unit 1 – Work 1 - Practice Answers.pdf">2 - Unit 1 – Work 1 - Practice Answers.pdf</a></li>
 <li>📦 <a href="3 - A software development company.docx">3 - A software development company.docx</a></li>
 <li>📦 <a href="4 - Unit 1 - Work - Practice.docx">4 - Unit 1 - Work - Practice.docx</a></li>
 <li>📁 <a href="Language Reference - Extra Practice/index.html">Language Reference - Extra Practice</a></li>
