--- a/output/Primer_anio/English/1 - Technical English I 2024/index.html
+++ b/output/Primer_anio/English/1 - Technical English I 2024/index.html
@@ -32,7 +32,7 @@
 <li>🔊 <a href="BP_A1_CB_063_TkP2_07.mp3">BP_A1_CB_063_TkP2_07.mp3</a></li>
 <li>🔊 <a href="BP_A1_CB_064_TkP2_08.mp3">BP_A1_CB_064_TkP2_08.mp3</a></li>
 <li>📦 <a href="Technical English I 2024_.docx">Technical English I 2024_.docx</a></li>
-<li>📄 <a href="Unit 1 - Pronunciation.pdf">Unit 1 - Pronunciation.pdf</a></li>
+<li>📚 <a href="Unit 1 - Pronunciation.pdf">Unit 1 - Pronunciation.pdf</a></li>
 <li>📁 <a href="Unit 1 - Work/index.html">Unit 1 - Work</a></li>
 <li>📁 <a href="Unit 1 - Work - Language Reference/index.html">Unit 1 - Work - Language Reference</a></li>
 <li>📁 <a href="Unit 2 - IT History/index.html">Unit 2 - IT History</a></li>
