--- a/output/Segundo_anio/Edi_2/pdfs/index.html
+++ b/output/Segundo_anio/Edi_2/pdfs/index.html
@@ -15,24 +15,24 @@
 <body>
   <h1>Segundo_anio/Edi_2/pdfs</h1>
   <ul>
-<li>📄 <a href="AWTLCL-21.10.pdf">AWTLCL-21.10.pdf</a></li>
-<li>📄 <a href="La línea de comandos de Linux.pdf">La línea de comandos de Linux.pdf</a></li>
-<li>📄 <a href="TLCL-24.11.pdf">TLCL-24.11.pdf</a></li>
-<li>📄 <a href="edi2_00_links.pdf">edi2_00_links.pdf</a></li>
-<li>📄 <a href="edi2_01_debian.pdf">edi2_01_debian.pdf</a></li>
-<li>📄 <a href="edi2_02_cli_01.pdf">edi2_02_cli_01.pdf</a></li>
-<li>📄 <a href="edi2_02_cli_02.pdf">edi2_02_cli_02.pdf</a></li>
-<li>📄 <a href="edi2_02_cli_03.pdf">edi2_02_cli_03.pdf</a></li>
-<li>📄 <a href="edi2_02_cli_04.pdf">edi2_02_cli_04.pdf</a></li>
-<li>📄 <a href="edi2_02_cli_05.pdf">edi2_02_cli_05.pdf</a></li>
-<li>📄 <a href="edi2_03_git_01.pdf">edi2_03_git_01.pdf</a></li>
-<li>📄 <a href="edi2_03_git_02.pdf">edi2_03_git_02.pdf</a></li>
-<li>📄 <a href="edi2_04_network.pdf">edi2_04_network.pdf</a></li>
-<li>📄 <a href="edi2_05_restful_api.pdf">edi2_05_restful_api.pdf</a></li>
-<li>📄 <a href="edi2_06_lc_01.pdf">edi2_06_lc_01.pdf</a></li>
-<li>📄 <a href="edi2_06_lc_02.pdf">edi2_06_lc_02.pdf</a></li>
-<li>📄 <a href="edi2_06_lc_03.pdf">edi2_06_lc_03.pdf</a></li>
-<li>📄 <a href="thelinuxcommandline.pdf">thelinuxcommandline.pdf</a></li>
+<li>📚 <a href="AWTLCL-21.10.pdf">AWTLCL-21.10.pdf</a></li>
+<li>📚 <a href="La línea de comandos de Linux.pdf">La línea de comandos de Linux.pdf</a></li>
+<li>📚 <a href="TLCL-24.11.pdf">TLCL-24.11.pdf</a></li>
+<li>📚 <a href="edi2_00_links.pdf">edi2_00_links.pdf</a></li>
+<li>📚 <a href="edi2_01_debian.pdf">edi2_01_debian.pdf</a></li>
+<li>📚 <a href="edi2_02_cli_01.pdf">edi2_02_cli_01.pdf</a></li>
+<li>📚 <a href="edi2_02_cli_02.pdf">edi2_02_cli_02.pdf</a></li>
+<li>📚 <a href="edi2_02_cli_03.pdf">edi2_02_cli_03.pdf</a></li>
+<li>📚 <a href="edi2_02_cli_04.pdf">edi2_02_cli_04.pdf</a></li>
+<li>📚 <a href="edi2_02_cli_05.pdf">edi2_02_cli_05.pdf</a></li>
+<li>📚 <a href="edi2_03_git_01.pdf">edi2_03_git_01.pdf</a></li>
+<li>📚 <a href="edi2_03_git_02.pdf">edi2_03_git_02.pdf</a></li>
+<li>📚 <a href="edi2_04_network.pdf">edi2_04_network.pdf</a></li>
+<li>📚 <a href="edi2_05_restful_api.pdf">edi2_05_restful_api.pdf</a></li>
+<li>📚 <a href="edi2_06_lc_01.pdf">edi2_06_lc_01.pdf</a></li>
+<li>📚 <a href="edi2_06_lc_02.pdf">edi2_06_lc_02.pdf</a></li>
+<li>📚 <a href="edi2_06_lc_03.pdf">edi2_06_lc_03.pdf</a></li>
+<li>📚 <a href="thelinuxcommandline.pdf">thelinuxcommandline.pdf</a></li>
   </ul>
 </body>
 </html>
