--- a/output/Segundo_anio/English/videos/index.html
+++ b/output/Segundo_anio/English/videos/index.html
@@ -15,7 +15,7 @@
 <body>
   <h1>Segundo_anio/English/videos</h1>
   <ul>
-<li>📄 <a href="COMMUNICATION 1 - Video Comprehension.pdf">COMMUNICATION 1 - Video Comprehension.pdf</a></li>
+<li>📚 <a href="COMMUNICATION 1 - Video Comprehension.pdf">COMMUNICATION 1 - Video Comprehension.pdf</a></li>
   </ul>
 </body>
 </html>
