--- a/output/Segundo_anio/Poo/fotos_de_pizarron/index.html
+++ b/output/Segundo_anio/Poo/fotos_de_pizarron/index.html
@@ -20,8 +20,8 @@
 <li>🖼️ <a href="03_repaso_de diagnostico_inicial.jpeg">03_repaso_de diagnostico_inicial.jpeg</a></li>
 <li>🖼️ <a href="04_repaso_de diagnostico_inicial.jpeg">04_repaso_de diagnostico_inicial.jpeg</a></li>
 <li>🖼️ <a href="05_repaso_de diagnostico_inicial.jpeg">05_repaso_de diagnostico_inicial.jpeg</a></li>
-<li>📄 <a href="Comenzando con objetos.pdf">Comenzando con objetos.pdf</a></li>
-<li>📄 <a href="instancia.pdf">instancia.pdf</a></li>
+<li>📚 <a href="Comenzando con objetos.pdf">Comenzando con objetos.pdf</a></li>
+<li>📚 <a href="instancia.pdf">instancia.pdf</a></li>
 <li>📁 <a href="juego del truco POO/index.html">juego del truco POO</a></li>
   </ul>
 </body>
