Add various Bash scripts for demonstration and utility purposes
- Implemented array manipulation scripts: array-mapfile.sh, array-multi.sh, array-sort.sh
- Created asynchronous execution demo scripts: async-child.sh, async-parent.sh
- Developed average calculation script: average.sh
- Added a case-menu driven system information program: case-menu.sh
- Included a file information script: file-info.sh
- Created command line option processing script using getopts: getopts-test.sh
- Implemented file modification time counting script: hours.sh
- Developed loan payment calculation script: loan-calc.sh
- Added local variable demonstration script: local-vars.sh
- Implemented longest word finder scripts: longest-word.sh, longest-word2.sh, longest-word3.sh
- Created modulo demonstration scripts: modulo.sh, modulo2.sh
- Developed parameter viewing scripts: posit-param.sh, posit-param2.sh, posit-param3.sh
- Implemented input reading and validation scripts: read-ifs.sh, read-integer.sh, read-menu.sh, read-multiple.sh, read-secret.sh, read-single.sh, read-validate.sh
- Added simple counter and menu driven scripts: simple_counter.sh, while-count.sh, while-menu.sh, while-menu2.sh
- Implemented signal handling demonstration scripts: trap-demo.sh, trap-demo2.sh, trap-demo3.sh
- Added case conversion demonstration script: ul-param.sh
- Developed until loop demonstration script: until-count.sh
- Implemented various integer evaluation scripts: test-integer.sh, test-integer2.sh, test-integer2a.sh, test-integer3.sh, test-integer4.sh
- Created string evaluation script: test-string.sh
- Added while loop reading scripts: while-read.sh, while-read2.sh

--- a/output/Segundo_anio/Edi_2/index.html
+++ b/output/Segundo_anio/Edi_2/index.html
@@ -15,7 +15,7 @@
 <body>
   <h1>Segundo_anio/Edi_2</h1>
   <ul>
-<li>📁 <a href="Scripts/index.html">Scripts</a></li>
+<li>📦 <a href="Scripts/">Scripts/ (Scripts)</a></li>
 <li>📚 <a href="html/00_index.html">html → 00_index.html</a></li>
 <li>📚 <a href="html/01_basico.html">html → 01_basico.html</a></li>
 <li>📚 <a href="html/02_intermedio.html">html → 02_intermedio.html</a></li>
